syntax = "proto3";
package pb;  // 声明所在包
option go_package = "{{projectName}}/pb";


//进程信息
message Process {
    string name = 1;
    uint64 time = 2;

    int32 pid = 3;
    int32 parentId = 4;
    string memoryPercent = 5;
    uint64 memory = 6;
    string CPUPercent = 7;
    string username = 8;
    string cmd = 9;
    int32 numGoroutine = 10;
    int32 OSthreads = 11;
    int32 GOMAXPROCS = 12;
    int32 CPUNum = 13;

    string GitTag = 15;
	string PcName = 16;
	string BuildTime = 17;
	string GitSHA = 18;
	string nodeInfo = 19;
    uint64 runTime = 20;
}

message UpdateMonitorReq {
    Process process = 1;
}

